finished and converted md to pdf

--- a/odd/readme.html
+++ b/odd/readme.html
@@ -25,7 +25,7 @@
 <p>Malte kl. Piening, Mark Hiltenkamp, Christoph Meyer</p>
 <p>Angewandte Systemwissenschaften: Regelbasierte Modelle (WS18/19)</p>
 <p>Die folgende Modellbeschreibung folgt dem ODD-Schema für ein individuelles, agentenbasiertes Modell. (Grim et al. 2006, 2010)</p>
-<h2 id="1-modellzewck">1. Modellzewck</h2>
+<h2 id="1-modellzweck">1. Modellzweck</h2>
 <p>In diesem Modell geht es darum, eine optimale Strategie zum Bewirtschaften der Gäste für Barkeeper zu finden. Dabei ist die Güte einer Strategie die maximale Anzahl der Gäste in Kombination mit der Schwankung der Gästeanzahl, wobei eine hohe Gästedichte mit geringer Schwankung das Perfekte Ergebnis darstellt. Gleichzeitig bleiben Eigenschaften wie Bewegungsgeschwindikeit der Barkeeper oder Verhalten der Gäste konstant.</p>
 <hr>
 <h2 id="2-entit%C3%A4ten-zustandsvariablen-und-skalen">2. Entitäten, Zustandsvariablen und Skalen</h2>
